tests/baselines/reference/privateFieldAssignabilityFromUnknown(target=es2015).errors.txt
privateFieldAssignabilityFromUnknown.ts(5,7): error TS2322: Type 'unknown' is not assignable to type 'Class'.


==== privateFieldAssignabilityFromUnknown.ts (1 errors) ====
    export class Class {
      #field: any
    }
    
    const task: Class = {} as unknown;
          ~~~~
!!! error TS2322: Type 'unknown' is not assignable to type 'Class'.
    